# email-vault-backend

./: .gitignore  app.py  config.py  extensions.py  pyproject.toml  requirements.txt  wait-for-it.sh
common/messaging/: email_sender.py
common/models/: user.py
common/repositories/: user_repository.py
data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.000030  binlog.000031  binlog.000032  binlog.000033  binlog.000034  binlog.000035  binlog.000036  binlog.000037  binlog.000038  (+99 more)
data/#innodb_redo/: #ib_redo11
data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/email_vault/: alembic_version.ibd  user_audit.ibd  users.ibd
data/mysql/: general_log_213.sdi  slow_log_214.sdi
data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  (+96 more)
flaskapp/: routes.py
(+3 files in other folders)
